@@ -2,6 +2,9 @@ WIAPASCAL CHANGE LOG
 ======================
 
 2024/10/
+        28 Added PIWiaItem2 as array of IWIAItem2;
+           Changed interface IWIAItem2.DeviceDlg declaration;
+           Changed DownloadNativeUI method
         25 Added Item Category;
 	   First Test with Native UI;
 	   Changed some Const Names.
